--- a/index.html
+++ b/index.html
@@ -4,38 +4,33 @@
 <head>
     <title>About Me</title>
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <!-- Adding Bootstrap CSS Before Custom CSS -->
+    <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.css">
+    <!-- Adding Bootstrap CSS Before Custom CSS, Using bootstrap source code for visibility -->
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
 <body>
 
     <!-- Bootstrap Navbar -->
+    <header id="masthead">
         <nav class="navbar navbar-default">
-                <div class="container-fluid">
+                <div class="container-fluid container">
                   <!-- Brand and toggle get grouped for better mobile display -->
                   <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                      <span class="sr-only">Toggle navigation</span>
-                      <span class="icon-bar"></span>
-                      <span class="icon-bar"></span>
-                      <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" href="#">Brandon Helgeson</a>
+                    <a class="navbar-brand" href="index.html" id="logo">Brandon Helgeson</a>
                   </div>
               
                   <!-- Collect the nav links, forms, and other content for toggling -->
                   <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav navbar-right">
-                      <li><a href="#">About</a></li>
-                      <li><a href="#">Portfolio</a></li>
-                      <li><a href="#">Contact</a></li>
+                      <li><a href="index.html">About</a></li>
+                      <li><a href="portfolio.html">Portfolio</a></li>
+                      <li><a href="contact.html">Contact</a></li>
                     </ul>
                   </div><!-- /.navbar-collapse -->
                 </div><!-- /.container-fluid -->
               </nav>
-
+    </header>
     <!--  Commenting Out Existing Nav Bar <Header> in order to add BootStrap Nav Bar
     <header id="masthead">
         <div class="container">
