--- a/index.html
+++ b/index.html
@@ -31,49 +31,58 @@
                 </div><!-- /.container-fluid -->
               </nav>
     </header>
-    <!--  Commenting Out Existing Nav Bar <Header> in order to add BootStrap Nav Bar
-    <header id="masthead">
-        <div class="container">
-            <a href="index.html" id="logo">Brandon Helgeson</a>
-            <nav>
-                <a href="index.html">About</a>
-                <a href="portfolio.html">Portfolio</a>
-                <a href="contact.html">Contact</a>
-            </nav> 
-        </div> 
-    </header> -->
 
 <div id="main-container" class="container">
+    <div class="row">
+        <section class="main-section col-sm-8">
+            <div class="page-header">
+                <h1>About Me</h1>
+            </div>
 
-    <section class="main-section">
-        <h1>About Me</h1>
+            <div class="row">
+                <div class="col-sm-3">
+                     <img src="https://instagram.ftpa1-1.fna.fbcdn.net/vp/0835592aee84fa4feae3b326e1e9f39c/5B028BD7/t51.2885-15/e35/1799630_772143502911525_293693392_n.jpg" class="auth-image" alt="Brandon">
+                </div> <!--closing image section row-->
 
-        <img src="https://instagram.ftpa1-1.fna.fbcdn.net/vp/0835592aee84fa4feae3b326e1e9f39c/5B028BD7/t51.2885-15/e35/1799630_772143502911525_293693392_n.jpg" class="auth-image" alt="Brandon">
+                <div class="col-sm-9">
+                    <div class="caption">
 
-        <p> Hello, My name is Brandon Helgeson (HEL-guh-sen). I am a Senior Business Analyst at a major theme park company. My job entails wearing a lot of hats; 
-            I am a Product Owner for an Agile Scrum team, I help to manage technical teams, I configure park tickets and research questions in a database,
-            I help to ensure that the cutting edge new technologies being delivered are inline with the requirements of Marketing, Finance, and Operations, 
-            among many, many, other things.</p>
-            <br>
-        <p> Outside of work, I am a part-time student at the University of Central Florida, where I am currenty enrolled in a six month "coding bootcamp" program,
-            aimed at becoming a full-stack web developer. When I am not working or coding, I enjoy SCUBA diving, fishing, and other activities that take me 
-            outdoors in beautiful central Florida. I also love to learn new grooves on the drumset, restore old things, and build new things. </p>
+                        <p> Hello, My name is Brandon Helgeson (HEL-guh-sen). I am a Senior Business Analyst at a major theme park company. My job entails wearing a lot of hats; 
+                            I am a Product Owner for an Agile Scrum team, I help to manage technical teams, I configure park tickets and research questions in a database,
+                            I help to ensure that the cutting edge new technologies being delivered are inline with the requirements of Marketing, Finance, and Operations, 
+                            among many, many, other things.</p>
+                            <br>
+                        <p> Outside of work, I am a part-time student at the University of Central Florida, where I am currenty enrolled in a six month "coding bootcamp" program,
+                            aimed at becoming a full-stack web developer. When I am not working or coding, I enjoy SCUBA diving, fishing, and other activities that take me 
+                            outdoors in beautiful central Florida. I also love to learn new grooves on the drumset, restore old things, and build new things. </p>
+                    </div>
+                </div>  <!--closing text section row-->
+           
+            </div> <!--closing main section row-->
+        </section>
 
-    </section>
 
-    <section class="sidebar">
-        <div id="connect">
-            <h2>Connect with Me</h2>
-            <a href="https://github.com/B-Helgeson" target="_blank">
-                <img src="assets/images/git.png" class="social" alt="Github"></a>
-            <a href="https://www.linkedin.com/in/brandonhelgeson/" target="_blank">
-                <img src="assets/images/link.png" class="social" alt="LinkedIn"></a>
-            <a href="https://stackexchange.com/users/12876070/brandon-helgeson" target="_blank">
-                <img src="assets/images/stack.png" class="social" alt="Stack Overflow"></a>
-        </div>
-    </section>
 
-</div>
+        <div class="sidebar col-sm-4">
+            <div id="connect">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h2 class="panel-title">Connect with Me</h2>
+                    </div>
+                    <div class="panel-body">
+                            <a href="https://github.com/B-Helgeson" target="_blank">
+                                <img src="assets/images/git.png" class="social" alt="Github"></a>
+                            <a href="https://www.linkedin.com/in/brandonhelgeson/" target="_blank">
+                                <img src="assets/images/link.png" class="social" alt="LinkedIn"></a>
+                            <a href="https://stackexchange.com/users/12876070/brandon-helgeson" target="_blank">
+                                <img src="assets/images/stack.png" class="social" alt="Stack Overflow"></a>
+                    </div>
+                </div>
+            </div>
+        </div> 
+
+    </div>  <!--closing row-->
+</div> <!--closing container-->
 
 <footer>
     <div class="container">
