--- a/portfolio.html
+++ b/portfolio.html
@@ -4,60 +4,100 @@
 <head>
     <title>About Me</title>
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.css">
+    <!-- Adding Bootstrap CSS Before Custom CSS, Using bootstrap source code for visibility -->
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
-<body>
-    <header id="masthead">
-        <div class="container">
-            <a href="index.html" id="logo">Brandon Helgeson</a>
-            <nav>
-                <a href="index.html">About</a>
-                <a href="portfolio.html">Portfolio</a>
-                <a href="contact.html">Contact</a>
-            </nav>
+<!-- Bootstrap Navbar -->
+<header id="masthead">
+    <nav class="navbar navbar-default">
+        <div class="container-fluid container">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <a class="navbar-brand" href="index.html" id="logo">Brandon Helgeson</a>
+            </div>
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <a href="index.html">About</a>
+                    </li>
+                    <li>
+                        <a href="portfolio.html">Portfolio</a>
+                    </li>
+                    <li>
+                        <a href="contact.html">Contact</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
         </div>
-    </header>
+        <!-- /.container-fluid -->
+    </nav>
 
 <div id="main-container" class="container">
+<div class="row">
+    <section class="main-section col-sm-8">
+        <div class="page-header">
+            <h1>portfolio</h1>
+        </div>
 
-    <section class="main-section">
-        <h1>Portfolio</h1>
-            <div class="work">
+        <div class="row">
+            <div class="col-sm-6">
+                <div class="work">
                     <img src="assets/images/hangman.jpg" class="auth-image" alt="Hangman">
                     <h3>Hangman</h3>
-            </div>
-            <div class="work">
-                    <img src="assets/images/rpg.jpg" class="auth-image" alt="RPG Game">
-                    <h3>RPG Game</h3>
-            </div>
-            <div class="work">
+                </div>
+                <div class="work">
                     <img src="assets/images/trivia.jpg" class="auth-image" alt="Trivia Game">
                     <h3>Trivia Game</h3>
-            </div>
-            <div class="work">
-                    <img src="assets/images/widget.jpg" class="auth-image" alt="Rutgers Info Widget">
-                    <h3>Rutgers Info Widget</h3>
-            </div>
-            <div class="work">
+                </div>
+                <div class="work">
                     <img src="assets/images/rockpaperscissors.jpg" class="auth-image" alt="Rock Paper Scissors">
                     <h3>Rock Paper Scissors</h3>
+                </div>
             </div>
-    </section>
+            <!--closing left column-->
 
-    <section class="sidebar">
-        <div id="connect">
-            <h2>Connect with Me</h2>
-            <a href="https://github.com/B-Helgeson" target="_blank">
-                <img src="assets/images/git.png" class="social" alt="Github"></a>
-            <a href="https://www.linkedin.com/in/brandonhelgeson/" target="_blank">
-                <img src="assets/images/link.png" class="social" alt="LinkedIn"></a>
-            <a href="https://stackexchange.com/users/12876070/brandon-helgeson" target="_blank">
-                <img src="assets/images/stack.png" class="social" alt="Stack Overflow"></a>
+            <div class="col-sm-6">
+                <div class="work">
+                    <img src="assets/images/rpg.jpg" class="auth-image" alt="RPG Game">
+                    <h3>RPG Game</h3>
+                </div>
+                <div class="work">
+                    <img src="assets/images/widget.jpg" class="auth-image" alt="Rutgers Info Widget">
+                    <h3>Rutgers Info Widget</h3>
+                </div>
+            </div>
+            <!--closing right column -->
+
         </div>
+        <!--closing main section row-->
     </section>
 
+    <div class="sidebar col-sm-4">
+            <div id="connect">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h2 class="panel-title">Connect with Me</h2>
+                    </div>
+                    <div class="panel-body">
+                            <a href="https://github.com/B-Helgeson" target="_blank">
+                                <img src="assets/images/git.png" class="social" alt="Github"></a>
+                            <a href="https://www.linkedin.com/in/brandonhelgeson/" target="_blank">
+                                <img src="assets/images/link.png" class="social" alt="LinkedIn"></a>
+                            <a href="https://stackexchange.com/users/12876070/brandon-helgeson" target="_blank">
+                                <img src="assets/images/stack.png" class="social" alt="Stack Overflow"></a>
+                    </div>
+                </div>
+            </div>
+        </div> 
 </div>
+<!--closing row-->
+</div>
+<!--closing container-->
 
 <footer>
     <div class="container">
