--- a/portfolio.html
+++ b/portfolio.html
@@ -41,7 +41,7 @@
 <div class="row">
     <section class="main-section col-sm-8">
         <div class="page-header">
-            <h1>portfolio</h1>
+            <h1>Portfolio</h1>
         </div>
 
         <div class="row">
