responsive images and more column sizes

--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
 
 <div id="main-container" class="container">
 <div class="row">
-    <section class="main-section col-sm-8">
+    <section class="main-section col-sm-12 col-lg-8">
         <div class="page-header">
             <h1>Contact</h1>
         </div>
@@ -62,7 +62,7 @@
         </form>
     </section>
 
-    <div class="sidebar col-sm-4">
+    <div class="sidebar col-sm-12 col-lg-4">
             <div id="connect">
                 <div class="panel panel-default">
                     <div class="panel-heading">
