--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
 
 <div id="main-container" class="container">
     <div class="row">
-        <section class="main-section col-sm-8">
+        <section class="main-section col-sm-12 col-lg-8">
             <div class="page-header">
                 <h1>About Me</h1>
             </div>
 
             <div class="row">
                 <div class="col-sm-3">
-                     <img src="https://instagram.ftpa1-1.fna.fbcdn.net/vp/0835592aee84fa4feae3b326e1e9f39c/5B028BD7/t51.2885-15/e35/1799630_772143502911525_293693392_n.jpg" class="auth-image" alt="Brandon">
+                     <img class="img-responsive" src="https://instagram.ftpa1-1.fna.fbcdn.net/vp/0835592aee84fa4feae3b326e1e9f39c/5B028BD7/t51.2885-15/e35/1799630_772143502911525_293693392_n.jpg" class="auth-image" alt="Brandon">
                 </div> <!--closing image section row-->
 
                 <div class="col-sm-9">
