--- a/portfolio.html
+++ b/portfolio.html
@@ -39,7 +39,7 @@
 
 <div id="main-container" class="container">
 <div class="row">
-    <section class="main-section col-sm-8">
+    <section class="main-section col-sm-12 col-lg-8">
         <div class="page-header">
             <h1>Portfolio</h1>
         </div>
@@ -47,15 +47,15 @@
         <div class="row">
             <div class="col-sm-6">
                 <div class="work">
-                    <img src="assets/images/hangman.jpg" class="auth-image" alt="Hangman">
+                    <img class="img-responsive" src="assets/images/hangman.jpg" class="auth-image" alt="Hangman">
                     <h3>Hangman</h3>
                 </div>
                 <div class="work">
-                    <img src="assets/images/trivia.jpg" class="auth-image" alt="Trivia Game">
+                    <img class="img-responsive" src="assets/images/trivia.jpg" class="auth-image" alt="Trivia Game">
                     <h3>Trivia Game</h3>
                 </div>
                 <div class="work">
-                    <img src="assets/images/rockpaperscissors.jpg" class="auth-image" alt="Rock Paper Scissors">
+                    <img class="img-responsive" src="assets/images/rockpaperscissors.jpg" class="auth-image" alt="Rock Paper Scissors">
                     <h3>Rock Paper Scissors</h3>
                 </div>
             </div>
@@ -63,11 +63,11 @@
 
             <div class="col-sm-6">
                 <div class="work">
-                    <img src="assets/images/rpg.jpg" class="auth-image" alt="RPG Game">
+                    <img class="img-responsive" src="assets/images/rpg.jpg" class="auth-image" alt="RPG Game">
                     <h3>RPG Game</h3>
                 </div>
                 <div class="work">
-                    <img src="assets/images/widget.jpg" class="auth-image" alt="Rutgers Info Widget">
+                    <img class="img-responsive" src="assets/images/widget.jpg" class="auth-image" alt="Rutgers Info Widget">
                     <h3>Rutgers Info Widget</h3>
                 </div>
             </div>
@@ -77,7 +77,7 @@
         <!--closing main section row-->
     </section>
 
-    <div class="sidebar col-sm-4">
+    <div class="sidebar col-sm-12 col-lg-4">
             <div id="connect">
                 <div class="panel panel-default">
                     <div class="panel-heading">
