--- a/contact.html
+++ b/contact.html
@@ -46,11 +46,11 @@
             <ul>
                 <li>
                     <label for="name">Name</label>
-                    <input type="text" name="name" id="name" placeholder="John Smith" required="required">
+                    <input type="text" name="name" id="name" placeholder="Sam Dawson" required="required">
                 </li>
                 <li>
                     <label for="email">Email</label>
-                    <input type="text" name="email" id="email" placeholder="example@mail.com" required="required">
+                    <input type="text" name="email" id="email" placeholder="example@gmail.com" required="required">
                 </li>
                 <li>
                     <label for="message">Message</label>
